--- a/MarioTribute/mario.css
+++ b/MarioTribute/mario.css
@@ -1,10 +1,16 @@
 body{
     background-color: #ffce29;
     color: antiquewhite;
+    background-image: url("https://jlaw21.github.io/Resources/mario-pipe.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center center;
+    background-attachment: fixed;
 }
 
 header{
     background-color: rgb(255, 57, 57);
+    background-image: url("https://jlaw21.github.io/Resources/mario-pipe.png");
 }
 
 section{
@@ -25,6 +31,9 @@ footer{
 
 nav{
     background-color: #007b4a;
+    background-image: url("https://jlaw21.github.io/Resources/mario-pipe.png");
+    background-size: contain;
+    background-position: bottom;
 }
 
 h3{
